
Users can still acheive a numerical result by using as.numeric() on input before performing modulo.

* Periods, durations, and intervals can now all be put into a data frame.

* Periods, durations, and intervals can be intuitively subset with $ and []. These operations also can be used as settors with <-.

* The parsing functions and the as.period method for intervals are now slightly faster.



Version 0.2.6
-------------------------------------------------------------------------

* use `test_package` to avoid incompatibility with current version of
  `testthat`
  
* other minor fixes to pass `R CMD check`

Version 0.2.5
-------------------------------------------------------------------------

* added ymdThms() for parsing ISO 8061 formatted combned dates and times

BUG FIXES

* removed bug in parsing dates with "T" in them

* modified as.period.interval() to display periods in positive units

Version 0.2.4
-------------------------------------------------------------------------

* Add citations to JSS article

Version 0.2.3
-------------------------------------------------------------------------
NEW FEATURES

* ymd_hms(), hms(), and ms() functions can now parse dates that include decimal values in the seconds element.

* milliseconds(), microseconds(), nanoseconds(), and picoseconds() create period objects of the specified lengths. dmilliseconds(), dmicroseconds(), dnanoseconds(), and dpicoseconds() make duration objects of the specified lengths.


BUG FIXES

* lubridate no longer overwrites months(), start(), and end() from base R. Start and end have been replaced with int_start() and int_end(). 

* lubridate imports plyr and stringr packages, instead of depending on them.

Version 0.2.2
-------------------------------------------------------------------------
NEW FEATURES

* made division, modulo, and integer division operations compatible with difftimes

* created c() methods for periods and durations


BUG FIXES
