@@ -315,9 +315,9 @@ int_flip <- function(int){
 #' @examples
 #' int <- new_interval(ymd("2001-01-01"), ymd("2002-01-01"))
 #' # 2001-01-01 UTC--2002-01-01 UTC
-#' int_shift(int, duration(days = 11))
+#' int_shift(int, new_duration(days = 11))
 #' # 2001-01-12 UTC--2002-01-12 UTC
-#' int_shift(int, duration(hours = -1))
+#' int_shift(int, new_duration(hours = -1))
 #' # 2000-12-31 23:00:00 UTC--2001-12-31 23:00:00 UTC
 int_shift <- function(int, by){
 	if(!is.timespan(by)) stop("by is not a recognized timespan object")
